--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,6 +89,8 @@
         "xstddef": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "math.h": "c",
+        "corecrt_math.h": "c"
     }
 }
